# tqdm-osc94

./: .gitignore  pyproject.toml
.github/workflows/: build.yml
examples/: demo.py  raw_demo.py
src/tqdm_osc94/: __init__.py  progress.py
tests/: test_progress.py
